--- a/IslandClusteringAcceleration.UnitTests/IslandClusteringAcceleration.UnitTests.csproj
+++ b/IslandClusteringAcceleration.UnitTests/IslandClusteringAcceleration.UnitTests.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\IslandClusteringAcceleration\IslandClusteringAcceleration.csproj" />
+  </ItemGroup>
+
 </Project>
